# bnle

./: README.md  package.json  pnpm-lock.yaml  turbo.json
.github/workflows/: ci.yml
apps/macro/: .gitignore  README.md  index.html  package.json  pnpm-lock.yaml
apps/macro/src/: App.tsx
apps/macro/src-tauri/: Cargo.toml  tauri.conf.json
apps/macro/src-tauri/icons/: icon.icns
apps/macro/src-tauri/src/: lib.rs  main.rs  tray.rs
apps/portfolio/: astro.config.mjs  package.json
apps/portfolio/src/layouts/: BaseLayout.astro
apps/portfolio/src/pages/: index.astro
apps/portfolio/src/styles/: global.css
