[package]
name = "macro"
version = "0.1.0"
description = "macro"
edition = "2021"

[lib]
name = "macro_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# The original `rdev` crate is no longer maintained, using fork.
rdev = { version = "0.5.0-2", git = "https://github.com/rustdesk-org/rdev" }
tauri = { version = "2", features = ["macos-private-api", "tray-icon"] }
tauri-plugin-opener = "2"
serde_json = "1.0.140"
